--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+      content="This is an App to track and check the responsiveness of any website on different viewport sizes. You can customize different screen sizes of your choice from given standard mozilla viewport list."
+    />  
+    <meta name=”robots” content=”index, follow”>
+    <meta property="og:type" content="Website" />
+    <meta property="og:title" content="Responsiveness Tracker" />
+    <meta property="og:description" content="This is an App to track and check the responsiveness of any website on different viewport sizes." />
+    <meta property="og:image" content="https://cdn2.iconfinder.com/data/icons/business-241/256/business_responsive_web_design-512.png" />
+    <meta property="og:url" content="https://hyperloo.github.io/responsivetracker" />
+    <meta property="og:site_name" content="Responsiveness Tracker" />    
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo2.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Responsiveness Tracker | by tekhin</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
